# isn20261

./: .gitignore  AGENTS.md  DATABASE.md  Makefile  README.md  __main__.py  compose.yaml  event.json  template.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
docs/: inconsistencias.md  openAPI.yaml  openapi.yaml
docs/Banco-de-Dados/: Modelagem.md
function/: handler.py  preferences.py  recommend.py  requirements.txt  watch_later.py
function/shared/: db.py  response.py
functions/: layer-requirements.txt
functions/change_email/: change_email.py
functions/history/: history.py
functions/login/: login.py
functions/lost_password/: lost_password.py
functions/register/: register.py
functions/shared/: auth.py
layer/python/db/: __init__.py  auth.py  client.py  email_sub.py  history.py  logs.py  tokens.py  users.py
scripts/: create_local_tables.py
serverless/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
serverless/function/: handler.py
serverless/www/: index.html
